Segundo cambio pagina demo

--- a/css/style.css
+++ b/css/style.css
@@ -9758,11 +9758,11 @@ background-repeat: repeat;
 /* GALERIA */
 .section__gallery{
   margin: auto;
-  border: 1px solid rgba(188,188,188,0.544);
+  border: 2px solid rgba(188,188,188,0.544);
   box-shadow: 0 4px 8px 0 #000;
   border-radius: 20px;
   padding: 30px;
-  background-color: #adb5bd;
+  background-color: white;
   display: flex;
   align-items: center;
   flex-flow: wrap;
@@ -9771,17 +9771,20 @@ background-repeat: repeat;
 }
 
 .img3{
-  max-width: 200px;
+  background-color: #fff;
+  width: 200px;
+  height: 200px;
   border-radius: 20px;
   justify-content: baseline;
   margin: 10px;
   opacity: 1;
-  transition: all 1s;
-  border: 1px solid rgba(222, 222, 222, 0.118);
+  transition: all 2s;
+  border: 2px solid rgba(222, 222, 222, 0.118);
   box-shadow: 0 4px 8px 0 rgba(8, 7, 7, 0.343);
 }
 
-.image__gallery{
+.image_gallery{
+  
   position: relative;
   transition: all 1s;
 }
